--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -1,6 +1,6 @@
 [[section-introduction-and-goals]]
 == Introduction and Goals
-
+This is a mock to test how to deploy the documentation.
 [role="arc42help"]
 ****
 Describes the relevant requirements and the driving forces that software architects and development team must consider. These include
