--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -1,7 +1,6 @@
 [[section-system-scope-and-context]]
 == System Scope and Context
 
-
 [role="arc42help"]
 ****
 .Contents
@@ -19,6 +18,7 @@ Various options:
 * Context diagrams
 * Lists of communication partners and their interfaces.
 ****
+
 
 
 === Business Context
@@ -39,9 +39,16 @@ Alternatively (or additionally) you can use a table.
 The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
 ****
 
-**<Diagram or Table>**
+image:3-Context/BussinessView.png["Bussines view"]
+[options="header",cols="1,2"]
+|===
+|Node/Artifact|Description
+| _Node1_ | _<Description-1>_
+| _Node2_ | _<Description-2>_
+| _Node3_ | _<Description-3>_
+|===
 
-**<optionally: Explanation of external domain interfaces>**
+
 
 === Technical Context
 
@@ -56,11 +63,13 @@ Many stakeholders make architectural decision based on the technical interfaces 
 .Form
 E.g. UML deployment diagram describing channels to neighboring systems,
 together with a mapping table showing the relationships between channels and input/output.
-
 ****
 
-**<Diagram or Table>**
-
-**<optionally: Explanation of technical interfaces>**
-
-**<Mapping Input/Output to Channels>**
+image:3-Context/TechnicalView.png["Technical view"]
+[options="header",cols="1,2"]
+|===
+|Node/Artifact|Description
+| _Node1_ | _<Description-1>_
+| _Node2_ | _<Description-2>_
+| _Node3_ | _<Description-3>_
+|===
