--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -42,10 +42,9 @@ The title of the table is the name of your system, the three columns contain the
 image:3-Context/BussinessView.png["Bussines view"]
 [options="header",cols="1,2"]
 |===
-|Node/Artifact|Description
-| _Node1_ | _<Description-1>_
-| _Node2_ | _<Description-2>_
-| _Node3_ | _<Description-3>_
+|Actor|Description
+| _Actor1_ | _<Description-1>_
+| _Actor_ | _<Description-2>_
 |===
 
 
