--- a/docs/12_glossary.adoc
+++ b/docs/12_glossary.adoc
@@ -26,6 +26,6 @@ Potentially more columns in case you need translations.
 [options="header"]
 |===
 | Term         | Definition
-| <Term-1>     | <definition-1>
+| WCAG     | Web Content Accessibility Guidelines (https://www.w3.org/WAI/WCAG2AAA-Conformance) 
 | <Term-2>     | <definition-2>
 |===
