--- a/docs/03_system_scope_and_context.adoc
+++ b/docs/03_system_scope_and_context.adoc
@@ -1,60 +1,47 @@
 [[section-system-scope-and-context]]
 == System Scope and Context
 
+LoMap is a software system designed to provide users with personalized maps about places and local businesses in their city. 
+The maps will be under the full control of the users and the shared information will be stored in personal pod according to the SOLID project.
+
+Another feature of the application will be to allow places to create their own space, like a digital version of their physical place.
+
 [role="arc42help"]
 ****
-.Contents
-System scope and context - as the name suggests - delimits your system (i.e. your scope) from all its communication partners
-(neighboring systems and users, i.e. the context of your system). It thereby specifies the external interfaces.
 
-If necessary, differentiate the business context (domain specific inputs and outputs) from the technical context (channels, protocols, hardware).
 
-.Motivation
-The domain interfaces and technical interfaces to communication partners are among your system's most critical aspects. Make sure that you completely understand them.
-
-.Form
-Various options:
-
-* Context diagrams
-* Lists of communication partners and their interfaces.
-****
 
 
 
 === Business Context
 
+The system will allow users to add locations in different categories, see places and information about those places taken from their friends, show the locations in a map window, add review scores, comments... 
+
+The user is able to add locations in different categories, add review scores, comments, or pictures about the added places. It also will be possible to manage from the application the information that is accessible with other users, like their friends or group of friends and to see the map with filters like by category, friends... 
+
+
+The system is structured in two parts: a frontend and a backend. The user only interfaces with the frontend, which in turn interfaces with the backend, which then works with the Solid Pod provider and the database serve the data the frontend might need.
+
 [role="arc42help"]
 ****
-.Contents
-Specification of *all* communication partners (users, IT-systems, ...) with explanations of domain specific inputs and outputs or interfaces.
-Optionally you can add domain specific formats or communication protocols.
-
-.Motivation
-All stakeholders should understand which data are exchanged with the environment of the system.
-
-.Form
-All kinds of diagrams that show the system as a black box and specify the domain interfaces to communication partners.
-
-Alternatively (or additionally) you can use a table.
-The title of the table is the name of your system, the three columns contain the name of the communication partner, the inputs, and the outputs.
-****
-
-image:3-Context/BussinessView.png["Bussines view"]
-[options="header",cols="1,2"]
-|===
-|Actor|Description
-| _Actor1_ | _<Description-1>_
-| _Actor_ | _<Description-2>_
-|===
 
 
 
 === Technical Context
 
+The frontend of the application is made with React. It also uses Redux.
+
+Techology:
+    - TypeScript as programming language
+    - MongoDB as Database
+    - React Redux
+    - Axios
+    - Postman
+
+
+
 [role="arc42help"]
 ****
-.Contents
-Technical interfaces (channels and transmission media) linking your system to its environment. In addition a mapping of domain specific input/output to the channels, i.e. an explanation with I/O uses which channel.
 
 .Motivation
 Many stakeholders make architectural decision based on the technical interfaces between the system and its context. Especially infrastructure or hardware designers decide these technical interfaces.
@@ -62,13 +49,11 @@ Many stakeholders make architectural decision based on the technical interfaces 
 .Form
 E.g. UML deployment diagram describing channels to neighboring systems,
 together with a mapping table showing the relationships between channels and input/output.
+
 ****
 
-image:3-Context/TechnicalView.png["Technical view"]
-[options="header",cols="1,2"]
-|===
-|Node/Artifact|Description
-| _Node1_ | _<Description-1>_
-| _Node2_ | _<Description-2>_
-| _Node3_ | _<Description-3>_
-|===
+**<Diagram or Table>**
+
+**<optionally: Explanation of technical interfaces>**
+
+**<Mapping Input/Output to Channels>**
