--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -22,3 +22,28 @@ Motivate what you have decided and why you decided that way,
 based upon your problem statement, the quality goals and key constraints.
 Refer to details in the following sections.
 ****
+
+Technology decisions
+This are the technologies that we have decided to use, some of them may vary in future iterations of the poyect:
+ * SOLID Pods for security
+ * TypeScript as programming language
+ * MongoDb as our DMBS
+ * Redux using React as UI
+ * Axios
+ * Postman
+
+Design decisions:
+The general design of our project has two main parts, connected using a facade:
+ * Webapp (frontend): with views and connections to the SOLID pods and to the RestAPI facade
+ * RestAPI (backend): controls the acess to the database and works as a microservice
+
+Quality decisions
+The main quality attributes that we will focus on are the following:
+ * Privacy: SOLID Pods will be used to ensure that user's data is not compromised
+ * Decentralization
+ * Usability: We intend to make an app that can perform its task in an efficient and correct way
+ * Accessibility: Inexperienced users will be able to navigate and use the app
+
+
+
+
