--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -39,10 +39,14 @@ The general design of our project has two main parts, connected using a facade:
 
 Quality decisions
 The main quality attributes that we will focus on are the following:
- * Privacy: SOLID Pods will be used to ensure that user's data is not compromised
- * Decentralization
- * Usability: We intend to make an app that can perform its task in an efficient and correct way
- * Accessibility: Inexperienced users will be able to navigate and use the app
+[options="header",cols="1,2,2"]
+|===
+|Quality goal|Scenario|Solution approach
+|Privacy|Any user using our application will feel their data is secure | We will use SOLID Pods to ensure that user's data is not compromised.
+|Usability|All users, regardless of their level, are able to navigate and use the application correctly|We will use UX conventions to ensure that the app has its components presented in a familiar way
+|Accessibility|All users, regardless of their level, will be able to navigate and use the application|
+
+
 
 
 
