--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -30,28 +30,26 @@ There are many notations for describing scenarios, e.g.
 
 ****
 
-=== <Runtime Scenario 1>
+=== User registration
+* _Alice enters the system for the first time and registers her personal data to create an account and start ussing the webapp.
+* _The user will be able to fill a form with their data that is saved on their private POD.
 
 
-* _<insert runtime diagram or textual description of the scenario>_
-* _<insert description of the notable aspects of the interactions between the
-building block instances depicted in this diagram.>_
+=== User Login
+* _Bob already registered on the system and wants to log in with their user and password to acess the webapp.
+* _The user will be able to fill a form with their user and password that will be sent to the server to be authenticated and allow or deny access.
 
-It is possible to use a sequence diagram:
 
-[plantuml,"Sequence diagram",png]
-----
-actor Alice
-actor Bob
-database Pod as "Bob's Pod"
-Alice -> Bob: Authentication Request
-Bob --> Alice: Authentication Response
-Alice  --> Pod: Store route
-Alice -> Bob: Another authentication Request
-Alice <-- Bob: another authentication Response
-----
-=== <Runtime Scenario 2>
+=== Adding a Location
+* _Alice wants to add the location restaurant to the webapp and see it on the map.
+* _The user will be able to select a location category and the coordinates for the location to be placed and seen on their map.
 
-=== ...
 
-=== <Runtime Scenario n>
+=== Reviewing information about a place
+* _Bob wants to select a friend's added location and see the pictures they added to it.
+* _Locations made public or shared with the user will be able to be accesed by the user to review aditional information that the creator added to the place.
+
+
+=== Changing privacy settings
+* _Alice doesn't want their friends seeing the locations she added to the map so she acesses the settings of the webapp to disable sharing them.
+* _The different settings about what information on the places and the user is accesible by their friends will be able to be changed, giving different options for each parameter.
