--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -31,44 +31,40 @@ There are many notations for describing scenarios, e.g.
 ****
 
 === User registration
-* _Alice enters the system for the first time and registers her personal data to create an account and start ussing the webapp.
-* _The user will be able to fill a form with their data that is saved on their private POD.
+* The user enters the system for the first time and registers their personal data to create an account and start ussing the webapp.
+** The user will be able to fill a form with their data that is saved on their private POD.
 
 
 === User Login
-* _Bob already registered on the system and wants to log in with their user and password to acess the webapp.
-* _The user will be able to fill a form with their user and password that will be sent to the server to be authenticated and allow or deny access.
+* The user already registered on the system and wants to log in with their user and password to acess the webapp.
+** The user will be able to fill a form with their user and password that will be sent to the server to be authenticated and allow or deny access.
 
 
 === Adding a Location
-* _Alice wants to add the location restaurant to the webapp and see it on the map.
-* _The user will be able to select a location category and the coordinates for the location to be placed and seen on their map.
+* The user wants to add the location restaurant to the webapp and see it on the map.
+** The user will be able to select a location category and the coordinates for the location to be placed and seen on their map and it will be saved on their POD.
 
 
 === Reviewing information about a place
-* _Bob wants to select a friend's added location and see the pictures they added to it.
-* _Locations made public or shared with the user will be able to be accesed by the user to review aditional information that the creator added to the place.
+* The user wants to select a friend's added location and see the pictures they added to it.
+** Locations made public or shared with the user will be able to be accesed by the user to review aditional information that the creator added to the place.
 
 
 === Changing privacy settings
-* _Alice doesn't want their friends seeing the locations she added to the map so she acesses the settings of the webapp to disable sharing them.
-* _The different settings about what information on the places and the user is accesible by their friends will be able to be changed, giving different options for each parameter.
+* The user doesn't want their friends seeing the locations she added to the map so they acess the settings of the webapp to disable sharing them.
+** The different settings about what information on the places and the user is accesible by their friends will be able to be changed, giving different options for each parameter.
 
 
-=== User adds a new friend
-* A user navigating the app may select the button to search and add a new friend request
-** If they are not friends already, the user will add the friend to their friend list
-** If they are friends already, it will remain the same
+=== Adding a new friend
+* A user navigating the app wants to search and add a concrete friend to their friend list.
+** The user will be able to write the user of a friend that, if in the database, will be added to their personal friend list and the connection stored on the database.
 
 
-=== User deletes a friend
-* A user can remove a friend from their friend list
-** If they select a friend from their list, they can choose to remove them and all places shared with them will no longer be shared
+=== Deleting a friend
+* A user wants to remove a friend from their friend list.
+** The user will be given the option to remove a frient from their list, if they do the system wont consider them a friend and all places shared with them will no longer be shared.
 
 
-=== User creates a friend group
-* A user can create a group of friends. This group is composed only of user friends and is managed by the user as if it was one friend.
-** The user can decide to share a location with the group and all participant will have that location shared too
-** The user can decide remove something  they shared from the group and all participants will have it removed
-** Users can add or remove friend from the group and all shared places with them will be removed
-** Users can delete a group they created. All places shared with the group will no longer be shared with any of the participants
+=== Creating a friend group
+* The user wants to create a group of friends and manage privacy on the group.
+** The group of friends will be treated as a single friend, after creation it will be stored on the database and the information that is shared or not will affect the whole group.
