--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -48,7 +48,9 @@ The main quality attributes that we will focus on are the following:
 |Quality goal|Scenario|Solution approach
 |Privacy|Any user using our application will feel their data is secure | We will use SOLID Pods to ensure that user's data is not compromised.
 |Usability|All users, regardless of their level, are able to navigate and use the application correctly|We will use UX conventions to ensure that the app has its components presented in a familiar way
-|Accessibility||
+|Accessibility|All users, regardless of their physical and mental capabilities should be able to use the application.|We are going to use external accesibility tools.
+|===
+
 
 
 
