--- a/docs/04_solution_strategy.adoc
+++ b/docs/04_solution_strategy.adoc
@@ -37,8 +37,8 @@ This are the technologies that we have decided to use, some of them may vary in 
 === Design decisions:
 The general design of our project has two main parts, connected using a facade:
 
- * Webapp (frontend): with views and connections to the SOLID pods and to the RestAPI facade
- * RestAPI (backend): controls the acess to the database and works as a microservice
+ * Webapp (frontend): It has different views, it connects to the SOLID pods to acess user's data in an secure way, and it communicates with the backend using a facade
+ * RestAPI (backend): controls the acess to the database and communicates with the frontend using the facade
 
 
 === Quality decisions
